--- a/clap.opam
+++ b/clap.opam
@@ -5,6 +5,9 @@ homepage: "https://github.com/rbardou/clap"
 bug-reports: "https://github.com/rbardou/clap/issues"
 dev-repo: "git+https://github.com/rbardou/clap.git"
 license: "MIT"
-depends: []
+depends: [
+   "ocaml" {>= "4.07"}
+   "dune"
+]
 build: [ ["dune" "build" "-p" name "-j" jobs] ]
 synopsis: "Command-Line Argument Parsing, imperative style with a consumption mechanism"
